# dreamlite-lllite

./: .gitignore  ATTRIBUTION.md  README.md  pyproject.toml  requirements.txt
scripts/: build_depth_cache_manifest.py  cache_latents.py  eval_lllite.py  fetch_prompts_diffusiondb.py  generate_training_images.py  generate_training_images_batched.py  infer_lllite.py  prepare_dataset.py  rewrite_manifest.py  train_lllite.py
src/dreamlite_lllite/: __init__.py  conditioning.py  inject.py  lllite.py  pipeline.py
tests/: test_inject_smoke.py  test_train_smoke.py
