[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamlite-lllite"
version = "0.1.0"
description = "ControlNet-LLLite for DreamLite (mobile)"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "torch>=2.4",
    "torchvision",
    "numpy",
    "Pillow",
    "transformers==4.57.3",
    "diffusers>=0.37",
    "accelerate",
    "safetensors",
    "einops",
    "tqdm",
]

[project.optional-dependencies]
preprocess = ["opencv-python-headless", "controlnet-aux"]

[tool.setuptools.packages.find]
where = ["src"]
